# Analizador_de_Complejidad

./: .gitignore  CAMBIOS_REPORTES.md  DOCUMENTACION_INTEGRACION.md  IMPLEMENTACION_COMPARACION_LLM.md  IMPLEMENTACION_CORRECCION_UI.md  INTEGRATION.md  README.md  RESUMEN_REPORTES.md  UBICACION_COMPARACION.md  back-planning.txt  guia.md  main.py  pyproject.toml  requisitos -v1.md
Backend/: FLUJO_INTEGRACION.md  GUIA_REPORTES.md  INTEGRACION_FRONTEND_VALIDADOR.md  README.md  VALIDACION_PROBABILIDADES_MODELO2.md  analizar_CP.py  app.py  debug_caso13.py  ejecutar_10_casos.py  ejecutar_todos_casos.py  ejecutar_todos_pseudocodigos.py  exec.py  flujo_analisis.py  generar_reporte_CP.py  generar_reporte_Prueba5.py  integrar_con_representacion.py  lectorArchivos.py  limpiar_emojis.py  logic.py  main.py  pyproject.toml  reporte_CP.txt  reporte_algoritmo_CP.md  reporte_algoritmo_Prueba5.md  requirements.txt  resultados_analisis_todos_20251206_204833.json  test_comparacion_llm.py  test_connection.py  test_correccion.py  test_correccion_output.json  test_correccion_resultado.json  test_correccion_simple.py  test_endpoint.py  test_endpoint_analisis.py  test_endpoint_reporte.py  test_endpoint_response.json  test_fase1_tabla_omega.py  test_fase2_ecuaciones.py  test_flowchart.py  test_flujo_completo.py  (+16 more)
Backend/.claude/: reglas.md
Backend/agentes/: __init__.py  agenteFlowchart.py  agenteReportador.py  agenteRepresentacionMatematica.py  agenteResolver.py  agenteValidador.py  agenteValidadorComplejidades.py  normalizador.py
Backend/algoritmos/: prueba.txt  validadorSintaxis.py
Backend/analizador_complejidad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Backend/config/: settings.py
Backend/core/: __init__.py  analysis_schemas.py  schemas.py  state.py
Backend/documentos/: gramatica.md
Backend/ml/: README.md  __init__.py  clasificador.py  entrenar_clasificador.py  generar_dataset.py  requirements_ml.txt
(+362 files in other folders)
